--- a/form.html
+++ b/form.html
@@ -17,9 +17,11 @@
         <![endif]-->
         
         <script src="" async defer></script>
-        <form action="" method="get">
+        <form action="proses.php" method="get">
             <!--Buatlah input html di sini-->
-
+            <label>Input Angka</label>
+            <input type="text" name="angka">
+            <input type="submit" name="submit" value="Submit">
         </form>
     </body>
 </html>
