--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
         <form action="proses.php" method="get">
             <!--Buatlah input html di sini-->
             <label>Input Angka</label>
-            <input type="text" name="angka">
+            <input type="text" name="angka" min="1">
             <input type="submit" name="submit" value="Submit">
         </form>
     </body>
